--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
+    "framer-motion": "^12.24.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
